fdo#65265 : fix for DOCX export of formatting data

Change-Id: Iab3c56e5c3e3cf359e42cf7080883d1408cc3304